# procus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  check_code.sh  curl_requests.http  docker-compose.yaml  flask_app.py  iteration_starter.py  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt  send_sms.py  sms_app.py
app/: .env  Dockerfile  app_fastapi.py  app_flask.py  app_starter.py  requirements.txt  utils.py
app/tests/: tests_fastapi.py
app/utils/: api.py  db.py  logging.py  orm.py  sms.py  starter.py
postgres/: Dockerfile  init.sql  init_ddl.sql  init_dml.sql  postgresql.conf
